--- a/assets/styles/autores.css
+++ b/assets/styles/autores.css
@@ -22,8 +22,23 @@
     display: flex;
     align-items: center;
     color: var(--verde-texto);
+    margin: .4rem 0;
+    
+}
+.autores__descricao{
+    padding: 3rem 0rem;
 }
 
+.fa{
+    color:var(--verde-texto);
+    
+}
+
+.fa:hover{
+    font-size: 1.03rem;
+    color: var(--verde-escuro);
+    transition: color .2s ease;
+}
 @media screen and (min-width: 1200px) {
     .autores__responsividade{ 
         display: flex;
