--- a/assets/styles/rodape.css
+++ b/assets/styles/rodape.css
@@ -72,7 +72,7 @@ hr {
 
 /*Developer Information */
 .footer{
-    border-top: 2px solid var(--preto);
+    border-top: 2px solid var(--verde-texto);
     background: var(-cinza);
     width: 100%;
     height:70px;
@@ -102,7 +102,7 @@ hr {
 
 .footer-content a{
     text-decoration: none;
-    color: var(--azul);
+    color: var(--verde-texto);
 }
 
 .footer-content a i{
@@ -111,10 +111,10 @@ hr {
 }
 
 .footer-content a:hover i{
-    color: var(--cinza);
+    color: var(--verde-escuro);
     transition: color .2s ease;
 }
 
 .footer-inf{
-    color: var(--azul);
+    color: var(--verde-texto);
 }
