--- a/assets/styles/sobre.css
+++ b/assets/styles/sobre.css
@@ -32,11 +32,11 @@ b{
     }
 
     .sobre__texto{
-        padding: 1rem 5rem;
+        padding: 1rem 7rem;
     }
 
     .sobre__imagem{
-        padding: 0 5rem;
+        padding: 1rem 50%;
     }
 
 
