--- a/assets/styles/ueafto.css
+++ b/assets/styles/ueafto.css
@@ -24,4 +24,9 @@
         justify-content: center;
         padding: 0 5rem;
     }
+
+    .ueafto__imagem{
+        margin: 3rem;
+        max-width: 25rem;
+    }
 }
