imagem no formulario

--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -22,6 +22,10 @@
     margin: 1em 0;
 }
 
+.formulario__imagem{
+    display: none;
+}
+
 
 @media screen and (min-width: 797px){
     .container__titulo-mobile{
