--- a/assets/styles/importancia.css
+++ b/assets/styles/importancia.css
@@ -50,6 +50,12 @@
     .importancia__titulo{
         padding: 2.5rem 3rem;
     }
+
+    .importancia__div-imagem{
+        display: flex;
+        justify-content: center;
+    }
+
     .importancia__imagem{
         padding: 0 5rem;
     }
