--- a/assets/styles/ueafto.css
+++ b/assets/styles/ueafto.css
@@ -27,7 +27,12 @@
     }
 
     .ueafto__imagem{
-        margin: 3rem;
+        margin: 1rem 3rem 1rem 3rem;
         max-width: 25rem;
+        padding: 1rem;
+    }
+
+    .ueafto__texto{
+        padding: 1rem 4rem 1rem 2rem;
     }
 }
