--- a/assets/styles/ueafto.css
+++ b/assets/styles/ueafto.css
@@ -6,16 +6,18 @@
 }
 
 .ueafto__imagem{
-    margin: 1rem;
+    margin: 1rem 1rem 0rem 1rem;
     max-width: 16rem;
     padding: 1rem 10%;
 }
 
 .ueafto__texto{
-    padding: 1rem 1.5rem;
+    padding: 1rem 1rem 1.5rem 1rem;
     align-items: center;
     color: var(--verde-texto);
     line-height: 1.5rem;
+    margin: 0 1.5rem;
+    text-align:justify;
 }
 
 @media screen and (min-width: 1200px) {
