--- a/assets/styles/ueafto.css
+++ b/assets/styles/ueafto.css
@@ -1,5 +1,5 @@
 .ueafto__titulo{
-    padding: 2rem;
+    padding: 2rem 2rem 0rem 2rem;
     font-size: 23px;
     font-weight: 700;
     color: var(--verde-escuro);
