--- a/assets/styles/rodape.css
+++ b/assets/styles/rodape.css
@@ -54,6 +54,12 @@ hr {
         margin: 0.6em 0;
     }
 
+    .lista-rodape__nome{
+        color: var(--cinza);
+        text-decoration: none;
+        margin-left: 1em;
+    }
+
     .lista-rodape__link{
         color: var(--cinza);
         text-decoration: none;
